added virtual mpf task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,17 @@
         {
             "taskName": "mpf",
             "type": "shell",
-            "command": "mpf -b"
+            "command": "mpf -b",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },
+        {
+            "taskName": "virtual mpf",
+            "type": "shell",
+            "command": "mpf -x",
+            "group": "build"
         }
     ]
 }
